fix spacing and titles

--- a/components/develop/develop.module.scss
+++ b/components/develop/develop.module.scss
@@ -2,12 +2,14 @@
 
 .develop {
   @extend %fullpage;
-  display: grid;
-  grid-template-columns: 400px 1fr;
-  align-items: flex-start;
-  width: 100%;
-  padding: 5% 10%;
-  padding-top: 120px;
+  padding: 80px 160px;
+
+  &__wrapper {
+    display: grid;
+    grid-template-columns: 400px 1fr;
+    align-items: flex-start;
+    width: 100%;
+  }
 
   &__title {
     width: 100%;
@@ -36,8 +38,8 @@
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: auto auto auto 1fr;
-  column-gap: 32px;
-  row-gap: 24px;
+  column-gap: 16px;
+  row-gap: 8px;
   max-width: 620px;
 
   &__icon {
@@ -66,7 +68,7 @@
   }
   &__description {
     display: flex;
-    gap: 32px;  
+    gap: 32px;
   }
   &__link {
     grid-column: 2 / 3;
